Ajuste de besitos: ahora son más grandes y van en una sola dirección

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h1> jijiji😘</h1>
-        <button id="sendKissBtn">💋 besito virtual 💋</button>
+        <h1> HOLA CESAR </h1>
+        <p>¿Listo para recibir tus besitos virtuales?</p>
+        <button id="sendKissBtn">💋 TOCA AQUI 💋</button>
         <div id="kissContainer"></div>
     </div>
 </body>
